# reaction_extraction

./: .gitignore  CLAUDE.md
ChemConverter/: .gitignore  README.md  app.py  cas_client.py  converters.py  manifest.json  requirements.txt  test_rate_limit.py
ChemConverter/static/: app.js  index.html  site.webmanifest  styles.css
MERMaid/: LICENSE  README.md  launch_webapp.sh  pyproject.toml  requirements.txt
MERMaid/Assets/: sample_full_opt_dictionary.json  sample_response_updated.json  sample_rxnsmiles.json
MERMaid/Prompts/: base_prompt.txt  check_image_prompt.txt  filter_image_prompt.txt  inbuilt_keyvaluepairs.txt  update_dict_prompt.txt
MERMaid/Prompts/archive/: electrosynthesis_step1_get_rxn_opt_prompt.txt  electrosynthesis_step2_update_prompt.txt  org_syn_step1_get_rxn_opt_prompt.txt  org_syn_step2_update_prompt.txt  photocatal_step1_get_rxn_opt_prompt.txt
MERMaid/scripts/: run_dataraider.py  run_kgwizard.py  run_mermaid.py  run_visualheist.py  startup.json
MERMaid/src/dataraider/: README.md  __init__.py  api_access.py  filter_image.py  image_cropping.py  postprocess.py  process_images.py  processor_info.py  reaction_dictionary_formating.py
MERMaid/src/kgwizard/: README.md  README.org  __init__.py  __main__.py
MERMaid/src/kgwizard/graphdb/: __init__.py  janus.py  schema_abstract.py
MERMaid/src/kgwizard/graphdb/schemas/: echem.py  org.py  photo.py
MERMaid/src/kgwizard/prompt/: __init__.py  builder.py  generator.py
MERMaid/src/kgwizard/prompt/assets/: header  instructions  tail
MERMaid/src/visualheist/: __init__.py  methods_visualheist.py
MERMaid/webapp/: fastapi_app.py  requirements.txt  streamlit_app.py
surf_extractor/: .env.example  README.md  requirements.txt  run.sh
surf_extractor/backend/: main.py  models.py  portkey_client.py
surf_extractor/backend/agents/: base_agent.py  chem_resolver_agent.py  coordinator.py  extraction_agent.py  formatter_agent.py  parser_agent.py  qa_reviewer_agent.py  reviewer_agent.py  scientist_agent.py
surf_extractor/backend/integrations/: chemconv_wrapper.py  mermaid_wrapper.py
surf_extractor/frontend/: index.html
