[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MERMaid"
version = "25.03"
description = "Multimodal mining of chemical reactions from PDFs"
dependencies = []
authors = [
  { name = "Shi Xuan Leong", email = "shixuan.leong@gmail.com"}, 
  { name = "Sergio Pablo-Garcia", email = "spgarcica@gmail.com"}, 
  { name = "Brandon Wong", email = "brandonhywong@gmail.com"}
]
maintainers = [
  { name = "Shi Xuan Leong", email = "shixuan.leong@gmail.com"}, 
  { name = "Sergio Pablo-Garcia", email = "spgarcica@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mining", "chemistry", "PDFs", "vision-language models", "knowledge graphs"]

[project.optional-dependencies]
visualheist = [
    "pdf2image", "Pillow", "transformers==4.44.1", "safetensors",
    "torch==2.3.0", "torchvision==0.18.0", "pytorch-lightning==2.3.0",
    "huggingface_hub", "einops", "timm"
]
dataraider = [
    "requests", "opencv-python", "numpy", "regex",
    "pubchempy", "openai", "huggingface_hub", "python-dotenv"
]
kgwizard = ["gremlinpython", "openai", "numpy"]
full = [
    "pdf2image", "Pillow", "transformers==4.44.1", "safetensors",
    "torch==2.3.0", "torchvision==0.18.0", "pytorch-lightning==2.3.0",
    "huggingface_hub", "einops", "timm",
    "requests", "opencv-python", "numpy", "regex",
    "pubchempy", "openai", "huggingface_hub", "python-dotenv", 
    "gremlinpython", "streamlit", "uvicorn", "fastapi", "python-multipart"
]

[project.scripts]
dataraider   = "scripts.run_dataraider:main"
visualheist  = "scripts.run_visualheist:main"
kgwizard     = "src.kgwizard.__main__:main"
mermaid      = "scripts.run_mermaid:main"

[tool.setuptools]
packages = { find = { where = [".", "src"] } }

[tool.setuptools.package-data]
MERMaid = [
    "dataraider/**/*.py",
    "kgwizard/**/*.py",
    "visualheist/**/*.py",
    "kgwizard/prompt/assets/**/*",
    "kgwizard/graphdb/schemas/**/*",
    "scripts/startup.json"
]

[tool.setuptools.exclude-package-data]
MERMaid = ["**/__pycache__/*", "**/*.pyc", "**/*.pyo"]
